[package]
name = "proxy-node-server"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/TheProxyCompany/proxy-node-server"
description = "Signed op-log replication engine for the Proxy device mesh."

[lib]
name = "proxy_node_server"

[[bin]]
name = "pnsd"
required-features = ["daemon"]

[features]
default = []
daemon = ["dep:clap", "dep:serde_json"]

[dependencies]
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha2 = "0.10"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
zeroize = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"

clap = { version = "4", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
