[package]
name = "proxy-node-server"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/TheProxyCompany/proxy-node-server"
description = "Signed op-log replication engine for the Proxy device mesh."

[lib]
name = "proxy_node_server"

[[bin]]
name = "pnsd"
required-features = ["daemon"]

[features]
default = []
daemon = ["dep:clap", "dep:serde_json"]
pull-http = ["daemon", "dep:axum", "dep:tokio", "dep:reqwest"]
# Provider-agnostic discovery/transport seams. Lean by construction: the traits
# and PeerInfo pull in no new deps, only the HTTP transport they build on.
discovery = ["pull-http"]
# mDNS/Bonjour LAN presence, behind its own dep so default builds stay clean.
discovery-mdns = ["discovery", "dep:mdns-sd"]
# Tailnet presence by shelling the local `tailscale` LocalAPI; no embedded node.
discovery-tailscale = ["discovery", "dep:serde_json", "dep:futures-util", "tokio?/process"]
# In-process multi-daemon harness for the functional/perf tests and examples.
harness = ["pull-http"]

[dependencies]
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha2 = "0.10"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
zeroize = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"
uhlc = "0.8"

clap = { version = "4", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync"], optional = true }
reqwest = { version = "0.13", default-features = false, optional = true }
mdns-sd = { version = "0.20", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "micro_ops"
harness = false

[[example]]
name = "bench_sync"
required-features = ["harness"]

[[example]]
name = "bench_startup"
required-features = ["harness"]

[[example]]
name = "mem_over_time"
required-features = ["harness"]
